re PR rtl-optimization/30931 (infinite loop with -O1 -fstrength-reduce)

PR rtl-optimization/30931
	* loop.c (combine_givs_p): Return false if either GIV is not
	always executed.

From-SVN: r122383